Update links to work offline

--- a/www/branding.html
+++ b/www/branding.html
@@ -7,7 +7,7 @@
     <meta property="og:site_name" content="WasteLand">
     <meta property="og:url" content="https://www.wlorigin.cf/">
     <meta property="og:description" content="Branding">
-    <meta property="og:image" content="https://www.wlorigin.cf/images/logo2small.webp">
+    <meta property="og:image" content="./images/logo2small.webp">
     <link rel="stylesheet" href="assets/css/branding.css?v=3">
     <link rel="stylesheet" href="assets/css/font.css?v=1">
     <title>WasteLand - Branding</title>
