--- a/www/contact.html
+++ b/www/contact.html
@@ -7,7 +7,7 @@
     <meta property="og:site_name" content="WasteLand">
     <meta property="og:url" content="https://www.wlorigin.cf/">
     <meta property="og:description" content="Technical support">
-    <meta property="og:image" content="https://www.wlorigin.cf/images/chatlogo.webp">
+    <meta property="og:image" content="./images/chatlogo.webp">
     <link rel="stylesheet" href="assets/css/compatibility.css?v=1">
     <link rel="stylesheet" href="assets/css/btn.css?v=1">
     <link rel="stylesheet" href="assets/css/main_new.css?v=5">
@@ -25,7 +25,7 @@
             <div class="header__logo">Contact</div>
             <nav class="nav">
                 <a class="nav__link active" href="#">Help and ideas</a>
-                <a class="nav__link" href="https://wlorigin.cf">Main</a>
+                <a class="nav__link" href="./index.html">Main</a>
             </nav>
         </div>
     </div>
