--- a/www/discord.html
+++ b/www/discord.html
@@ -7,7 +7,7 @@
     <meta property="og:site_name" content="WasteLand">
     <meta property="og:url" content="https://www.wlorigin.cf/">
     <meta property="og:description" content="Join our community">
-    <meta property="og:image" content="https://www.wlorigin.cf/images/discordlogo.webp">
+    <meta property="og:image" content="./images/discordlogo.webp">
     <meta http-equiv="refresh" content="5; url = https://discord.gg/UBaauaN">
     <link rel="stylesheet" href="assets/css/compatibility.css?v=1">
     <link rel="stylesheet" href="assets/css/btn.css?v=1">
