--- a/www/modpack.html
+++ b/www/modpack.html
@@ -9,7 +9,7 @@
     <meta property="og:site_name" content="WasteLand">
     <meta property="og:url" content="https://www.wlorigin.cf/">
     <meta property="og:description" content="Page to download and install minecraft modpack">
-    <meta property="og:image" content="https://www.wlorigin.cf/images/logo2small.webp">
+    <meta property="og:image" content="./images/logo2small.webp">
     <link rel="stylesheet" href="assets/css/compatibility.css?v=1">
     <link rel="stylesheet" href="assets/css/btn.css?v=1">
     <link rel="stylesheet" href="assets/css/main_new.css?v=5">
@@ -30,7 +30,7 @@
             <nav class="nav">
                 <a class="nav__link active" href="modpack.html">Archive</a>
                 <a class="nav__link" href="https://wiki.wlorigin.cf">Wiki</a>
-                <a class="nav__link" href="https://wlorigin.cf">Main</a>
+                <a class="nav__link" href="./index.html">Main</a>
             </nav>
         </div>
     </div>
