--- a/www/sandbox.html
+++ b/www/sandbox.html
@@ -6,7 +6,7 @@
     <meta property="og:site_name" content="WasteLand">
     <meta property="og:url" content="https://www.wlorigin.cf/">
     <meta property="og:description" content="Sandbox">
-    <meta property="og:image" content="https://www.wlorigin.cf/images/chatlogo.webp">
+    <meta property="og:image" content="./images/chatlogo.webp">
     <link rel="stylesheet" href="assets/css/pages.css?v=5">
     <title>Sandbox</title>
 </head>
