--- a/mobile/index.html
+++ b/mobile/index.html
@@ -9,7 +9,7 @@
     <meta property="og:site_name" content="WasteLand">
     <meta property="og:url" content="https://www.wlorigin.cf/">
     <meta property="og:description" content="WasteLand Origin community">
-    <meta property="og:image" content="https://www.wlorigin.cf/images/logo2.webp">
+    <meta property="og:image" content="./images/logo2.webp">
     <link rel="stylesheet" href="assets/css/main.css?v=44">
     <link rel="stylesheet" href="assets/css/font.css?v=1">
     <link rel="stylesheet" href="assets/css/pages.css?v=5">
