--- a/store/index.html
+++ b/store/index.html
@@ -7,7 +7,7 @@
     <meta property="og:site_name" content="WasteLand">
     <meta property="og:url" content="https://www.wlorigin.cf/">
     <meta property="og:description" content="Extended pass">
-    <meta property="og:image" content="https://www.wlorigin.cf/images/creditcardlogo.webp">
+    <meta property="og:image" content="./images/creditcardlogo.webp">
     <link rel="stylesheet" href="assets/css/main_new.css?v=32">
     <link rel="stylesheet" href="assets/css/compatibility.css?v=1"
     <link rel="stylesheet" href="assets/css/pages.css?v=5">
@@ -25,7 +25,7 @@
             <div class="header__logo">WasteLand Origin</div>
             <nav class="nav">
                 <a class="nav__link active" href="#">Support us</a>
-                <a class="nav__link" href="https://wlorigin.cf/">Главная</a>
+                <a class="nav__link" href="./index.html">Главная</a>
             </nav>
         </div>
     </div>
