--- a/www/index.html
+++ b/www/index.html
@@ -9,7 +9,7 @@
     <meta property="og:site_name" content="WasteLand">
     <meta property="og:url" content="https://www.wlorigin.cf/">
     <meta property="og:description" content="WasteLand Origin community">
-    <meta property="og:image" content="https://www.wlorigin.cf/images/logo2.webp">
+    <meta property="og:image" content="./images/logo2.webp">
     <link rel="stylesheet" href="assets/css/main_new.css?v=7">
     <link rel="me" href="https://mastodon.social/@SpiritOTHawk">
     <title>WasteLand Origin</title>
