--- a/www/privacy.html
+++ b/www/privacy.html
@@ -7,7 +7,7 @@
     <meta property="og:site_name" content="WasteLand">
     <meta property="og:url" content="https://www.wlorigin.cf/">
     <meta property="og:description" content="Privacy policy">
-    <meta property="og:image" content="https://www.wlorigin.cf/images/chatlogo.webp">
+    <meta property="og:image" content="./images/chatlogo.webp">
     <link rel="stylesheet" href="assets/css/compatibility.css?v=1">
     <link rel="stylesheet" href="assets/css/main_new.css?v=5">
     <title>WasteLand - Privacy</title>
