--- a/www/extpass.html
+++ b/www/extpass.html
@@ -25,7 +25,7 @@
             <div class="header__logo">WasteLand Origin</div>
             <nav class="nav">
                 <a class="nav__link active" href="#">Support us</a>
-                <a class="nav__link" href="./index.html">Главная</a>
+                <a class="nav__link" href="./index.html">Main</a>
             </nav>
         </div>
     </div>
@@ -40,7 +40,8 @@
                 <h2 class="intro__suptitle">- Сolorful chat</h2>
                 <h2 class="intro__suptitle">- Coming soon</h2>
                 <h1 class="intro__title"></h1>
-                <iframe width="728" height="200" src="https://widget.qiwi.com/widgets/big-widget-728x200?publicKey=48e7qUxn9T7RyYE1MVZswX1FRSbE6iyCj2gCRwwF3Dnh5XrasNTx3BGPiMsyXQFNKQhvukniQG8RTVhYm3iPyqYCXjdxwDHq4MMJqKq6K5WHWmvdQCsoPUMTxbiZJSBUpx6mYjA1Df8qBFR84axJkQdPTKYFA76ydwWnXAmrnQ1LwqqztGHsH7r2Zrcmi" allowtransparency="true" scrolling="no" frameborder="0"></iframe>
+                <img src="./images/qr-peercoin.png">
+                <h3 class="text_green">Peercoin</h3>
             </div>
         </div>
     </div>
