--- a/www/index.html
+++ b/www/index.html
@@ -20,7 +20,7 @@
             <div class="header__inner">
                 <div></div>
                 <nav class="nav">
-                    <a class="nav__link" href="https://store.wlorigin.cf">Support us</a>
+                    <a class="nav__link" href="./extpass.html">Support us</a>
                     <a class="nav__link" href="buy.html">Buy Pass</a>
                     <a class="nav__link" href="modpack.html">modpack</a>
 		    <a class="nav__link" href="https://modrinth.com/modpack/travellersstory">Traveller´s Story</a>
