Add svg and png favicons to html

--- a/www/discord.html
+++ b/www/discord.html
@@ -9,6 +9,8 @@
     <meta property="og:description" content="Join our community">
     <meta property="og:image" content="./images/discordlogo.webp">
     <meta http-equiv="refresh" content="5; url = https://discord.gg/UBaauaN">
+    <link rel="icon" type="image/svg+xml" href="./favicon.svg">
+    <link rel="icon" type="image/png" href="./favicon.png">
     <link rel="stylesheet" href="assets/css/compatibility.css?v=1">
     <link rel="stylesheet" href="assets/css/btn.css?v=1">
     <link rel="stylesheet" href="assets/css/main_new.css?v=5">
