--- a/www/sandbox.html
+++ b/www/sandbox.html
@@ -7,6 +7,8 @@
     <meta property="og:url" content="https://www.wlorigin.cf/">
     <meta property="og:description" content="Sandbox">
     <meta property="og:image" content="./images/chatlogo.webp">
+    <link rel="icon" type="image/svg+xml" href="./favicon.svg">
+    <link rel="icon" type="image/png" href="./favicon.png">
     <link rel="stylesheet" href="assets/css/pages.css?v=5">
     <title>Sandbox</title>
 </head>
