--- a/www/telegram.html
+++ b/www/telegram.html
@@ -9,6 +9,8 @@
     <meta property="og:description" content="Join our community">
     <meta property="og:image" content="https://i.ibb.co/5R10ZpW/telegramlogosmall.webp">
     <meta http-equiv="refresh" content="5; url = https://t.me/+8hcV3MpFlT83ODA6">
+    <link rel="icon" type="image/svg+xml" href="./favicon.svg">
+    <link rel="icon" type="image/png" href="./favicon.png">
     <link rel="stylesheet" href="assets/css/compatibility.css?v=1">
     <link rel="stylesheet" href="assets/css/btn.css?v=1">
     <link rel="stylesheet" href="assets/css/main_new.css?v=5">
