--- a/www/extpass.html
+++ b/www/extpass.html
@@ -8,6 +8,8 @@
     <meta property="og:url" content="https://www.wlorigin.cf/">
     <meta property="og:description" content="Extended pass">
     <meta property="og:image" content="./images/creditcardlogo.webp">
+    <link rel="icon" type="image/svg+xml" href="./favicon.svg">
+    <link rel="icon" type="image/png" href="./favicon.png">
     <link rel="stylesheet" href="assets/css/main_new.css?v=32">
     <link rel="stylesheet" href="assets/css/compatibility.css?v=1"
     <link rel="stylesheet" href="assets/css/pages.css?v=5">
