--- a/www/index.html
+++ b/www/index.html
@@ -10,6 +10,8 @@
     <meta property="og:url" content="https://www.wlorigin.cf/">
     <meta property="og:description" content="WasteLand Origin community">
     <meta property="og:image" content="./images/logo2.webp">
+    <link rel="icon" type="image/svg+xml" href="./favicon.svg">
+    <link rel="icon" type="image/png" href="./favicon.png">
     <link rel="stylesheet" href="assets/css/main_new.css?v=7">
     <link rel="me" href="https://mastodon.social/@SpiritOTHawk">
     <title>WasteLand Origin</title>
