--- a/www/server.html
+++ b/www/server.html
@@ -8,6 +8,8 @@
     <meta property="og:url" content="https://www.wlorigin.cf/">
     <meta property="og:description" content="Technical information. Perfomance.">
     <meta property="og:image" content="./images/serverlogo.webp">
+    <link rel="icon" type="image/svg+xml" href="./favicon.svg">
+    <link rel="icon" type="image/png" href="./favicon.png">
     <link rel="stylesheet" href="assets/css/compatibility.css?v=1">
     <link rel="stylesheet" href="assets/css/btn.css?v=1">
     <link rel="stylesheet" href="assets/css/main_new.css?v=5">
