Rename buy.html -> to pass.html

--- a/www/index.html
+++ b/www/index.html
@@ -22,8 +22,8 @@
             <div class="header__inner">
                 <div></div>
                 <nav class="nav">
-                    <a class="nav__link" href="./extpass.html">Support us</a>
-                    <a class="nav__link" href="buy.html">Buy Pass</a>
+                    <a class="nav__link" href="extpass.html">Support us</a>
+                    <a class="nav__link" href="pass.html">Pass</a>
                     <a class="nav__link" href="modpack.html">modpack</a>
 		    <a class="nav__link" href="https://modrinth.com/modpack/travellersstory">Traveller´s Story</a>
                     <a class="nav__link" href="https://map.wlorigin.cf">Map</a>
