--- a/www/pass.html
+++ b/www/pass.html
@@ -6,7 +6,7 @@
     <meta property="og:title" content="WasteLand Origin">
     <meta property="og:site_name" content="WasteLand">
     <meta property="og:url" content="https://www.wlorigin.cf/">
-    <meta property="og:description" content="Buy standart pass">
+    <meta property="og:description" content="Get Standart pass">
     <meta property="og:image" content="./images/creditcardlogo.webp">
     <link rel="icon" type="image/svg+xml" href="./favicon.svg">
     <link rel="icon" type="image/png" href="./favicon.png">
