Update links in html head

--- a/www/branding.html
+++ b/www/branding.html
@@ -5,7 +5,7 @@
     <meta name="author" content="SpiritOTHawk">
     <meta property="og:title" content="WasteLand Official site">
     <meta property="og:site_name" content="WasteLand">
-    <meta property="og:url" content="https://www.wlorigin.cf/">
+    <meta property="og:url" content="https://wlorigin.vercel.app">
     <meta property="og:description" content="Branding">
     <meta property="og:image" content="./images/logo2small.webp">
     <link rel="icon" type="image/svg+xml" href="./favicon.svg">
