--- a/www/discord.html
+++ b/www/discord.html
@@ -5,7 +5,7 @@
     <meta name="author" content="SpiritOTHawk">
     <meta property="og:title" content="Discord">
     <meta property="og:site_name" content="WasteLand">
-    <meta property="og:url" content="https://www.wlorigin.cf/">
+    <meta property="og:url" content="https://wlorigin.vercel.app">
     <meta property="og:description" content="Join our community">
     <meta property="og:image" content="./images/discordlogo.webp">
     <meta http-equiv="refresh" content="5; url = https://discord.gg/UBaauaN">
