--- a/www/modpack.html
+++ b/www/modpack.html
@@ -7,7 +7,7 @@
     <meta name="author" content="SpiritOTHawk">
     <meta property="og:title" content="Modpack">
     <meta property="og:site_name" content="WasteLand">
-    <meta property="og:url" content="https://www.wlorigin.cf/">
+    <meta property="og:url" content="https://wlorigin.vercel.app">
     <meta property="og:description" content="Page to download and install minecraft modpack">
     <meta property="og:image" content="./images/logo2small.webp">
     <link rel="icon" type="image/svg+xml" href="./favicon.svg">
