--- a/www/pass.html
+++ b/www/pass.html
@@ -5,7 +5,7 @@
     <meta name="author" content="SpiritOTHawk">
     <meta property="og:title" content="WasteLand Origin">
     <meta property="og:site_name" content="WasteLand">
-    <meta property="og:url" content="https://www.wlorigin.cf/">
+    <meta property="og:url" content="https://wlorigin.vercel.app">
     <meta property="og:description" content="Get Standart pass">
     <meta property="og:image" content="./images/creditcardlogo.webp">
     <link rel="icon" type="image/svg+xml" href="./favicon.svg">
