--- a/www/telegram.html
+++ b/www/telegram.html
@@ -5,7 +5,7 @@
     <meta name="author" content="SpiritOTHawk">
     <meta property="og:title" content="Telegram">
     <meta property="og:site_name" content="WasteLand">
-    <meta property="og:url" content="https://www.wlorigin.cf/">
+    <meta property="og:url" content="https://wlorigin.vercel.app">
     <meta property="og:description" content="Join our community">
     <meta property="og:image" content="https://i.ibb.co/5R10ZpW/telegramlogosmall.webp">
     <meta http-equiv="refresh" content="5; url = https://t.me/+8hcV3MpFlT83ODA6">
