--- a/www/extpass.html
+++ b/www/extpass.html
@@ -44,6 +44,7 @@
                 <h1 class="intro__title"></h1>
                 <img src="./images/qr-peercoin.png">
                 <h3 class="text_green">Peercoin</h3>
+                <h3 class="text_green">(for other options write @SpiritOTHawk)</h3>
             </div>
         </div>
     </div>
