--- a/www/contact.html
+++ b/www/contact.html
@@ -36,7 +36,7 @@
             <div class="intro__inner">
                 <h2 class="intro__suptitle">We can help you?</h2>
                 <h1 class="intro__title"></h1>
-                <a class="btn" href="mailto:support@wlorigin.cf">Email</a>
+                <a class="btn" href="mailto:spiritofthehawk@proton.me">Email</a>
                 <a class="btn" href="https://codeberg.org/WasteLandOrigin/WasteLandSite">Source code</a>
                 <br><br>
                 <a class="btn" href="telegram.html">Telegram</a>
