--- a/www/contact.html
+++ b/www/contact.html
@@ -42,6 +42,9 @@
                 <a class="btn" href="telegram.html">Telegram</a>
                 <a class="btn" href="discord.html">Discord</a>
                 <br><br>
+                <a class="btn" href="https://mastodon.social/@wlorigin">Mastodon</a>
+                <a class="btn" href="wlo:matrix.org">Matrix</a>
+                <br><br>
                 <a class="btn" href="discord.html">Forum</a>
             </div>
         </div>
