--- a/www/pass.html
+++ b/www/pass.html
@@ -24,7 +24,7 @@
 <header class="header">
     <div class="container">
         <div class="header__inner">
-            <div class="header__logo">Buy season pass</div>
+            <div class="header__logo">Get season pass</div>
             <nav class="nav">
                 <a class="nav__link active" href="#">Standart pass</a>
                 <a class="nav__link" href="./index.html">Main</a>
