Add official mastodon account verification

--- a/www/index.html
+++ b/www/index.html
@@ -14,6 +14,7 @@
     <link rel="icon" type="image/png" href="./favicon.png">
     <link rel="stylesheet" href="assets/css/main_new.css?v=7">
     <link rel="me" href="https://mastodon.social/@SpiritOTHawk">
+    <link rel="me" href="https://mastodon.social/@wlorigin">
     <title>WasteLand Origin</title>
 </head>
 <body>
