--- a/www/index.html
+++ b/www/index.html
@@ -26,9 +26,8 @@
                     <a class="nav__link" href="extpass.html">Support us</a>
                     <a class="nav__link" href="pass.html">Pass</a>
                     <a class="nav__link" href="modpack.html">modpack</a>
-		    <a class="nav__link" href="https://modrinth.com/modpack/travellersstory">Traveller´s Story</a>
-                    <a class="nav__link" href="https://map.wlorigin.cf">Map</a>
-                    <a class="nav__link" href="https://wiki.wlorigin.cf">Wiki</a>
+		            <a class="nav__link" href="https://modrinth.com/modpack/travellersstory">Traveller´s Story</a> 
+                    <a class="nav__link" href="https://https://codeberg.org/WasteLandOrigin/WasteLandSite/wiki">Wiki</a>
                     <a class="nav__link" href="contact.html">Contact</a>
                 </nav>
             </div>
