Update wiki link in modpack.html

--- a/www/modpack.html
+++ b/www/modpack.html
@@ -31,7 +31,7 @@
             <div class="header__logo">Cloud</div>
             <nav class="nav">
                 <a class="nav__link active" href="modpack.html">Archive</a>
-                <a class="nav__link" href="https://wiki.wlorigin.cf">Wiki</a>
+                <a class="nav__link" href="https://codeberg.org/WasteLandOrigin/WasteLandSite/wiki">Wiki</a>
                 <a class="nav__link" href="./index.html">Main</a>
             </nav>
         </div>
