--- a/www/branding.html
+++ b/www/branding.html
@@ -18,7 +18,7 @@
     <div class="block1">
         <div class="text_white"><h1>WasteLand Branding</h1></div>
         <br>
-        <a class="btn" href="https://pc.wlorigin.cf/files/wlorigin_branding.7z">Download</a>
+        <a class="btn" href="https://codeberg.org/WasteLandOrigin/wlo-branding">Download</a>
         <br><br>
     </div>
 </body>
