--- a/www/extpass.html
+++ b/www/extpass.html
@@ -43,7 +43,8 @@
                 <h2 class="intro__suptitle">- Coming soon</h2>
                 <h1 class="intro__title"></h1>
                 <img src="./images/qr-peercoin.png">
-                <h3 class="text_green">Peercoin</h3>
+                <img src="./images/monero-qr.png">
+                <h3 class="text_green">Peercoin and monero</h3>
                 <h3 class="text_green">(for other options write @SpiritOTHawk)</h3>
             </div>
         </div>
