--- a/www/index.html
+++ b/www/index.html
@@ -28,7 +28,8 @@
                     <a class="nav__link" href="modpack.html">modpack</a>
 		            <a class="nav__link" href="https://modrinth.com/modpack/travellersstory">Traveller´s Story</a>
 		            <a class="nav__link" href="https://mastodon.social/@wlorigin">Mastodon</a>
-                    <a class="nav__link" href="https://codeberg.org/WasteLandOrigin/WasteLandSite/wiki">Wiki</a>
+                    <a class="nav__link" href="https://wliki.tiddlyhost.com">Wiki</a>
+                    <a class="nav__link" href="https://wlorigin.betteruptime.com">Uptime</a>
                     <a class="nav__link" href="contact.html">Contact</a>
                 </nav>
             </div>
