--- a/www/modpack.html
+++ b/www/modpack.html
@@ -31,7 +31,7 @@
             <div class="header__logo">Cloud</div>
             <nav class="nav">
                 <a class="nav__link active" href="modpack.html">Archive</a>
-                <a class="nav__link" href="https://codeberg.org/WasteLandOrigin/WasteLandSite/wiki">Wiki</a>
+                <a class="nav__link" href="https://wliki.tiddlyhost.com">Wiki</a>
                 <a class="nav__link" href="./index.html">Main</a>
             </nav>
         </div>
@@ -46,21 +46,19 @@
             <hr>
             <h1>&nbsp;</h1>
         </div>
-        <h2 class="text_orange_big">Modrinth</h2>
+        <h2 class="text_orange_big">Neon</h2>
         <ul class="text_white">
-            <li><a class="text_white" href="https://modrinth.com/modpack/neon-modpack">Open project page</a></li>
+            <li><a class="text_white" href="https://modrinth.com/modpack/neon-modpack">Modrinth</a></li>
         </ul>
-        <h2 class="text_orange_big">1.19.4</h2>
+        <h2 class="text_orange_big">Traveller´s Story</h2>
         <ul class="text_white">
-            <li><a class="text_white" href="https://drive.google.com/file/d/1AIuLYDDwjpW4noV5gmxu53l8zrIk9e4B/view?usp=sharing">Standart edition</a></li>
-            &nbsp;
-            <li><a class="text_white" href="https://github.com/WasteLand-Dev/Neon/tree/CookieTapEdition-1">CookieTapEdition</a><a class="text_orange"> 1.19.2</a></li>
+            <li><a class="text_white" href="https://modrinth.com/modpack/travellersstory">Modrinth</a></li>
         </ul>
-        <h2 class="text_orange_big">1.20.1</h2>
+        <h2 class="text_orange_big">Other</h2>
         <ul class="text_white">
-            <li><a class="text_white" href="https://drive.google.com/file/d/14OJPsP0tv9AqeQdObiJq1i0LmuKTzTb9/view?usp=share_link">Pre-release</a></li>
+            <li><a class="text_white" href="https://modrinth.com/modpack/military-conflict-1">Military Confilct I</a></li>
             &nbsp;
-            <li><a class="text_white" href="https://codeberg.org/WasteLandOrigin/Neon">Standart edition</a></li>
+            <li><a class="text_white" href="https://modrinth.com/modpack/ultracraft-modpack">Ultracraft modpack</a></li>
         </ul>
     </div>
 </div>
