Use local image instead of hosting

--- a/www/modpack.html
+++ b/www/modpack.html
@@ -41,7 +41,7 @@
 <div class="intro3">
     <div class="container">
         <div class="intro__inner">
-            <img src="https://i.ibb.co/2Sj0xBS/logo2small.webp">
+            <img src="./images/logo2small.webp">
             <h2 class="text_orange_big">Archive</h2>
             <hr>
             <h1>&nbsp;</h1>
