--- a/www/modpack.html
+++ b/www/modpack.html
@@ -28,7 +28,7 @@
 <header class="header">
     <div class="container">
         <div class="header__inner">
-            <div class="header__logo">Cloud</div>
+            <div class="header__logo">List of our modpacks</div>
             <nav class="nav">
                 <a class="nav__link active" href="modpack.html">Archive</a>
                 <a class="nav__link" href="https://wliki.tiddlyhost.com">Wiki</a>
