Add VampireReborn (modpack) to modpacks list

--- a/www/modpack.html
+++ b/www/modpack.html
@@ -59,6 +59,8 @@
             <li><a class="text_white" href="https://modrinth.com/modpack/military-conflict-1">Military Confilct I</a></li>
             &nbsp;
             <li><a class="text_white" href="https://modrinth.com/modpack/ultracraft-modpack">Ultracraft modpack</a></li>
+            &nbsp;
+            <li><a class="text_white" href="https://modrinth.com/modpack/vampirereborn">VampireReborn</a></li>
         </ul>
     </div>
 </div>
