Update NewYear page :)

--- a/www/NewYear/index.html
+++ b/www/NewYear/index.html
@@ -13,7 +13,7 @@
         }
         body {
             background-color: #c7b39b;
-            background-image: url(2.webp);
+            background-image: url("./2.webp");
         }
     </style>
 </head>
@@ -25,7 +25,7 @@
     <div class="intro3">
         <div class="container">
             <div class="intro__inner">
-                <p class="fig"><img src="1_2024.jpg" alt="Не забывай про сервер discord :)"></p>
+                <p class="fig"><img src="./1_2025.webp" alt="Не забывай про сервер discord :)"></p>
             </div>
         </div>
     </div>
