Load image from local storage (branding)

--- a/www/discord.html
+++ b/www/discord.html
@@ -34,7 +34,7 @@
     <div class="intro3">
         <div class="container">
             <div class="intro__inner">
-                <img src="https://i.ibb.co/0VVkLCB/discordlogosmall.webp">
+                <img src="./images/discordlogosmall.webp">
                 <h2 class="intro__suptitle">You will be redirected within 5 seconds...</h2>
                 <a class="btn" href="https://discord.gg/UBaauaN">Click here if not redirected</a>
             </div>
