--- a/www/server.html
+++ b/www/server.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="assets/css/btn.css?v=1">
     <link rel="stylesheet" href="assets/css/main_new.css?v=5">
     <link rel="stylesheet" href="assets/css/font.css?v=1">
-    <title>WasteLand - SPerfomance</title>
+    <title>WasteLand - Perfomance</title>
 </head>
 <body>
 
@@ -26,7 +26,7 @@
         <div class="header__inner">
             <div class="header__logo">Server perfomance</div>
             <nav class="nav">
-                <a class="nav__link active" href="#">SP</a>
+                <a class="nav__link active" href="#">Info</a>
                 <a class="nav__link" href="./index.html">Main</a>
             </nav>
         </div>
@@ -45,7 +45,7 @@
                 <h1 class="text_white">Used personal PC for temporary hosting</h1>
                 <p>&nbsp;</p>
                 <p>&nbsp;</p>
-                <a class="btn" href="https://discord.com/invite/UBaauaN">Discord</a>
+                <a class="btn" href="./discord.html">Discord</a>
             </div>
         </div>
     </div>
