--- a/www/branding.html
+++ b/www/branding.html
@@ -10,8 +10,8 @@
     <meta property="og:image" content="./images/logo2small.webp">
     <link rel="icon" type="image/svg+xml" href="./favicon.svg">
     <link rel="icon" type="image/png" href="./favicon.png">
-    <link rel="stylesheet" href="assets/css/branding.css?v=3">
-    <link rel="stylesheet" href="assets/css/font.css?v=1">
+    <link rel="stylesheet" href="assets/css/branding.css">
+    <link rel="stylesheet" href="assets/css/font.css">
     <title>WasteLand - Branding</title>
 </head>
 <body>
