--- a/www/discord.html
+++ b/www/discord.html
@@ -7,14 +7,14 @@
     <meta property="og:site_name" content="WasteLand Origin">
     <meta property="og:url" content="https://wlorigin.vercel.app">
     <meta property="og:description" content="Join our community">
-    <meta property="og:image" content="./images/discordlogo.webp">
+    <meta property="og:image" content="./images/discordlogosmall.webp">
     <meta http-equiv="refresh" content="5; url = https://discord.gg/UBaauaN">
     <link rel="icon" type="image/svg+xml" href="./favicon.svg">
     <link rel="icon" type="image/png" href="./favicon.png">
-    <link rel="stylesheet" href="assets/css/compatibility.css?v=1">
-    <link rel="stylesheet" href="assets/css/btn.css?v=1">
-    <link rel="stylesheet" href="assets/css/main_new.css?v=5">
-    <link rel="stylesheet" href="assets/css/font.css?v=1">
+    <link rel="stylesheet" href="assets/css/compatibility.css">
+    <link rel="stylesheet" href="assets/css/btn.css">
+    <link rel="stylesheet" href="assets/css/main_new.css">
+    <link rel="stylesheet" href="assets/css/font.css">
     <title>Discord</title>
 </head>
 <body>
