--- a/www/extpass.html
+++ b/www/extpass.html
@@ -10,10 +10,10 @@
     <meta property="og:image" content="./images/creditcardlogo.webp">
     <link rel="icon" type="image/svg+xml" href="./favicon.svg">
     <link rel="icon" type="image/png" href="./favicon.png">
-    <link rel="stylesheet" href="assets/css/main_new.css?v=32">
-    <link rel="stylesheet" href="assets/css/compatibility.css?v=1"
-    <link rel="stylesheet" href="assets/css/pages.css?v=5">
-    <link rel="stylesheet" href="assets/css/font.css?v=1">
+    <link rel="stylesheet" href="assets/css/main_new.css">
+    <link rel="stylesheet" href="assets/css/compatibility.css"
+    <link rel="stylesheet" href="assets/css/pages.css">
+    <link rel="stylesheet" href="assets/css/font.css">
     <title>WasteLand - Extended pass</title>
 </head>
 <body>
