--- a/www/mastodon.html
+++ b/www/mastodon.html
@@ -3,19 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="author" content="SpiritOTHawk">
-    <meta property="og:title" content="Telegram">
+    <meta property="og:title" content="Mastodon">
     <meta property="og:site_name" content="WasteLand Origin">
     <meta property="og:url" content="https://wlorigin.vercel.app">
     <meta property="og:description" content="Join our community">
-    <meta property="og:image" content="https://i.ibb.co/5R10ZpW/telegramlogosmall.webp">
-    <meta http-equiv="refresh" content="5; url = https://t.me/+8hcV3MpFlT83ODA6">
+    <meta property="og:image" content="./images/mastodonlogosmall.webp">
+    <meta http-equiv="refresh" content="5; url = https://mastodon.social/@wlorigin">
     <link rel="icon" type="image/svg+xml" href="./favicon.svg">
     <link rel="icon" type="image/png" href="./favicon.png">
     <link rel="stylesheet" href="assets/css/compatibility.css">
     <link rel="stylesheet" href="assets/css/btn.css">
     <link rel="stylesheet" href="assets/css/main_new.css">
     <link rel="stylesheet" href="assets/css/font.css">
-    <title>Telegram</title>
+    <title>Discord</title>
 </head>
 <body>
 
@@ -25,7 +25,7 @@
 <header class="header">
     <div class="container">
         <div class="header__inner">
-            <div class="header__logo">Telegram</div>
+            <div class="header__logo">Mastodon</div>
             <nav class="nav">
                 <a class="nav__link active" href="#">Redirecting</a>
             </nav>
@@ -34,9 +34,9 @@
     <div class="intro3">
         <div class="container">
             <div class="intro__inner">
-                <img src="./images/telegramlogosmall.webp">
+                <img src="./images/mastodonlogosmall.webp">
                 <h2 class="intro__suptitle">You will be redirected within 5 seconds...</h2>
-                <a class="btn" href="https://t.me/+8hcV3MpFlT83ODA6">Click here if not redirected</a>
+                <a class="btn" href="https://mastodon.social/@wlorigin">Click here if not redirected</a>
             </div>
         </div>
     </div>
