--- a/www/modpack.html
+++ b/www/modpack.html
@@ -12,18 +12,16 @@
     <meta property="og:image" content="./images/logo2small.webp">
     <link rel="icon" type="image/svg+xml" href="./favicon.svg">
     <link rel="icon" type="image/png" href="./favicon.png">
-    <link rel="stylesheet" href="assets/css/compatibility.css?v=1">
-    <link rel="stylesheet" href="assets/css/btn.css?v=1">
-    <link rel="stylesheet" href="assets/css/main_new.css?v=5">
-    <link rel="stylesheet" href="assets/css/font.css?v=1">
+    <link rel="stylesheet" href="assets/css/compatibility.css">
+    <link rel="stylesheet" href="assets/css/btn.css">
+    <link rel="stylesheet" href="assets/css/main_new.css">
+    <link rel="stylesheet" href="assets/css/font.css">
     <title>Archive</title>
-    <style>
-        body {
-            background-color: rgb(32, 29, 29);
-        }
-    </style>
 </head>
 <body>
+
+<script src="assets/js/particles.min.js"></script>
+<script src="assets/js/particles.custom.js"></script>
 
 <header class="header">
     <div class="container">
@@ -31,38 +29,41 @@
             <div class="header__logo">List of our modpacks</div>
             <nav class="nav">
                 <a class="nav__link active" href="modpack.html">Archive</a>
-                <a class="nav__link" href="https://wliki.tiddlyhost.com">Wiki</a>
+                <a class="nav__link" href="#indev">Wiki</a>
+                <a class="nav__link" href="social.html">Social</a>
                 <a class="nav__link" href="./index.html">Main</a>
             </nav>
         </div>
     </div>
-</header>
 
-<div class="intro3">
-    <div class="container">
-        <div class="intro__inner">
-            <img src="./images/logo2small.webp">
-            <h2 class="text_orange_big">Archive</h2>
-            <hr>
-            <h1>&nbsp;</h1>
+    <div class="intro3">
+        <div class="container">
+            <div class="intro__inner">
+                <img src="./images/logo2small.webp">
+                <h2 class="text_orange_big">Archive</h2>
+                <hr>
+                <h1>&nbsp;</h1>
+            </div>
+            <h2 class="text_orange_big">Neon</h2>
+            <ul class="text_white">
+                <li><a class="text_white" href="https://modrinth.com/modpack/neon-modpack">Modrinth</a></li>
+            </ul>
+            <h2 class="text_orange_big">Traveller´s Story</h2>
+            <ul class="text_white">
+                <li><a class="text_white" href="https://modrinth.com/modpack/travellersstory">Modrinth</a></li>
+            </ul>
+            <h2 class="text_orange_big">Vampire Reborn</h2>
+            <ul class="text_white">
+                <li><a class="text_white" href="https://modrinth.com/modpack/vampirereborn">Modrinth</a></li>
+            </ul> 
+            <h2 class="text_orange_big">Other</h2>
+            <ul class="text_white">
+                <li><a class="text_white" href="https://modrinth.com/modpack/military-conflict-1">Military Confilct I</a></li>
+                &nbsp;
+                <li><a class="text_white" href="https://modrinth.com/modpack/ultracraft-modpack">Ultracraft modpack</a></li>
+            </ul>
         </div>
-        <h2 class="text_orange_big">Neon</h2>
-        <ul class="text_white">
-            <li><a class="text_white" href="https://modrinth.com/modpack/neon-modpack">Modrinth</a></li>
-        </ul>
-        <h2 class="text_orange_big">Traveller´s Story</h2>
-        <ul class="text_white">
-            <li><a class="text_white" href="https://modrinth.com/modpack/travellersstory">Modrinth</a></li>
-        </ul>
-        <h2 class="text_orange_big">Other</h2>
-        <ul class="text_white">
-            <li><a class="text_white" href="https://modrinth.com/modpack/military-conflict-1">Military Confilct I</a></li>
-            &nbsp;
-            <li><a class="text_white" href="https://modrinth.com/modpack/ultracraft-modpack">Ultracraft modpack</a></li>
-            &nbsp;
-            <li><a class="text_white" href="https://modrinth.com/modpack/vampirereborn">Vampire Reborn</a></li>
-        </ul>
     </div>
-</div>
+</header>
 </body>
 </html>
