--- a/www/privacy.html
+++ b/www/privacy.html
@@ -10,8 +10,8 @@
     <meta property="og:image" content="./images/chatlogo.webp">
     <link rel="icon" type="image/svg+xml" href="./favicon.svg">
     <link rel="icon" type="image/png" href="./favicon.png">
-    <link rel="stylesheet" href="assets/css/compatibility.css?v=1">
-    <link rel="stylesheet" href="assets/css/main_new.css?v=5">
+    <link rel="stylesheet" href="assets/css/compatibility.css">
+    <link rel="stylesheet" href="assets/css/main_new.css">
     <title>WasteLand - Privacy</title>
 </head>
 <body>
