--- a/www/contact.html
+++ b/www/contact.html
@@ -10,10 +10,10 @@
     <meta property="og:image" content="./images/chatlogo.webp">
     <link rel="icon" type="image/svg+xml" href="./favicon.svg">
     <link rel="icon" type="image/png" href="./favicon.png">
-    <link rel="stylesheet" href="assets/css/compatibility.css?v=1">
-    <link rel="stylesheet" href="assets/css/btn.css?v=1">
-    <link rel="stylesheet" href="assets/css/main_new.css?v=5">
-    <link rel="stylesheet" href="assets/css/font.css?v=1">
+    <link rel="stylesheet" href="assets/css/compatibility.css">
+    <link rel="stylesheet" href="assets/css/btn.css">
+    <link rel="stylesheet" href="assets/css/main_new.css">
+    <link rel="stylesheet" href="assets/css/font.css">
     <title>WasteLand - Contact</title>
 </head>
 <body>
@@ -26,6 +26,9 @@
         <div class="header__inner">
             <div class="header__logo">Contact</div>
             <nav class="nav">
+                <a class="nav__link" href="mastodon.html">Mastodon</a>
+                <a class="nav__link" href="telegram.html">Telegram</a>
+                <a class="nav__link" href="discord.html">Discord</a>
                 <a class="nav__link active" href="#">Help and ideas</a>
                 <a class="nav__link" href="./index.html">Main</a>
             </nav>
@@ -35,14 +38,11 @@
         <div class="container">
             <div class="intro__inner">
                 <h2 class="intro__suptitle">We can help you?</h2>
-                <h1 class="intro__title"></h1>
+                <h1 class="intro__title">Send us a message</h1>
                 <a class="btn" href="mailto:spiritofthehawk@proton.me">Email</a>
                 <a class="btn" href="https://codeberg.org/WasteLandOrigin/WasteLandSite">Source code</a>
                 <br><br>
-                <a class="btn" href="telegram.html">Telegram</a>
-                <a class="btn" href="discord.html">Discord</a>
-                <br><br>
-                <a class="btn" href="discord.html">Forum</a>
+                <a class="btn" href="https://matrix.to/#/@spiritothawk:tchncs.de?client=im.fluffychat">Matrix</a>
             </div>
         </div>
     </div>
