--- a/www/index.html
+++ b/www/index.html
@@ -12,7 +12,7 @@
     <meta property="og:image" content="./images/logo2.webp">
     <link rel="icon" type="image/svg+xml" href="./favicon.svg">
     <link rel="icon" type="image/png" href="./favicon.png">
-    <link rel="stylesheet" href="assets/css/main_new.css?v=9">
+    <link rel="stylesheet" href="assets/css/main_new.css">
     <link rel="me" href="https://mastodon.social/@SpiritOTHawk">
     <link rel="me" href="https://mastodon.social/@wlorigin">
     <title>WasteLand Origin</title>
@@ -26,9 +26,8 @@
                     <a class="nav__link" href="extpass.html">Support us</a>
                     <a class="nav__link" href="pass.html">Pass</a>
                     <a class="nav__link" href="modpack.html">modpack</a>
-		            <a class="nav__link" href="https://mastodon.social/@wlorigin">Mastodon</a>
-                    <a class="nav__link" href="https://wliki.tiddlyhost.com">Wiki</a>
-                    <a class="nav__link" href="https://wlorigin.betteruptime.com">Uptime</a>
+                    <a class="nav__link" href="discord.html">Discord</a>
+		            <a class="nav__link" href="social.html">Social</a>
                     <a class="nav__link" href="contact.html">Contact</a>
                 </nav>
             </div>
