--- a/www/sandbox.html
+++ b/www/sandbox.html
@@ -9,7 +9,7 @@
     <meta property="og:image" content="./images/chatlogo.webp">
     <link rel="icon" type="image/svg+xml" href="./favicon.svg">
     <link rel="icon" type="image/png" href="./favicon.png">
-    <link rel="stylesheet" href="assets/css/pages.css?v=5">
+    <link rel="stylesheet" href="assets/css/pages.css">
     <title>Sandbox</title>
 </head>
 <body>
