--- a/www/server.html
+++ b/www/server.html
@@ -10,10 +10,10 @@
     <meta property="og:image" content="./images/serverlogo.webp">
     <link rel="icon" type="image/svg+xml" href="./favicon.svg">
     <link rel="icon" type="image/png" href="./favicon.png">
-    <link rel="stylesheet" href="assets/css/compatibility.css?v=1">
-    <link rel="stylesheet" href="assets/css/btn.css?v=1">
-    <link rel="stylesheet" href="assets/css/main_new.css?v=5">
-    <link rel="stylesheet" href="assets/css/font.css?v=1">
+    <link rel="stylesheet" href="assets/css/compatibility.css">
+    <link rel="stylesheet" href="assets/css/btn.css">
+    <link rel="stylesheet" href="assets/css/main_new.css">
+    <link rel="stylesheet" href="assets/css/font.css">
     <title>WasteLand - Perfomance</title>
 </head>
 <body>
