--- a/www/social.html
+++ b/www/social.html
@@ -6,15 +6,15 @@
     <meta property="og:title" content="WasteLand Official site">
     <meta property="og:site_name" content="WasteLand Origin">
     <meta property="og:url" content="https://wlorigin.vercel.app">
-    <meta property="og:description" content="Get Standart pass">
-    <meta property="og:image" content="./images/creditcardlogo.webp">
+    <meta property="og:description" content="Social links">
+    <meta property="og:image" content="./images/chatlogo.webp">
     <link rel="icon" type="image/svg+xml" href="./favicon.svg">
     <link rel="icon" type="image/png" href="./favicon.png">
-    <link rel="stylesheet" href="assets/css/compatibility.css?v=1">
-    <link rel="stylesheet" href="assets/css/btn.css?v=1">
+    <link rel="stylesheet" href="assets/css/compatibility.css">
+    <link rel="stylesheet" href="assets/css/btn.css">
     <link rel="stylesheet" href="assets/css/main_new.css">
     <link rel="stylesheet" href="assets/css/font.css">
-    <title>Join us</title>
+    <title>WasteLand - Social</title>
 </head>
 <body>
 
@@ -24,9 +24,13 @@
 <header class="header">
     <div class="container">
         <div class="header__inner">
-            <div class="header__logo">Get season pass</div>
+            <div class="header__logo">Social</div>
             <nav class="nav">
-                <a class="nav__link active" href="#">Standart pass</a>
+                <a class="nav__link" href="#indev">Wiki</a>
+                <a class="nav__link" href="https://wlorigin.betteruptime.com">Uptime</a>
+                <a class="nav__link" href="server.html">Server</a>
+                <a class="nav__link" href="contact.html">Contact</a>
+                <a class="nav__link active" href="#">Links</a>
                 <a class="nav__link" href="./index.html">Main</a>
             </nav>
         </div>
@@ -34,10 +38,12 @@
     <div class="intro3">
         <div class="container">
             <div class="intro__inner">
-                <h2 class="intro__suptitle">It will take one minute.</h2>
-                <h1 class="intro__title">You need to fill out the form.</h1>
-                <a class="btn" href="https://forms.gle/Zg4s1QYfkNyfN2Gt7">I agree</a>
-                <a class="btn" href="contact.html">Technical support</a>
+                <h2 class="intro__suptitle">Read the news and communicate</h2>
+                <h1 class="intro__title">Our social networks</h1>
+                <a class="btn" href="discord.html">Discord</a>
+                <a class="btn" href="telegram.html">Telegram</a>
+                <br><br>
+                <a class="btn" href="mastodon.html">Mastodon</a>
             </div>
         </div>
     </div>
