--- a/www/telegram.html
+++ b/www/telegram.html
@@ -34,7 +34,7 @@
     <div class="intro3">
         <div class="container">
             <div class="intro__inner">
-                <img src="./images/telegramlogosmall.webp">
+                <img src="./images/telegramqr.png">
                 <h2 class="intro__suptitle">You will be redirected within 5 seconds...</h2>
                 <a class="btn" href="https://t.me/+8hcV3MpFlT83ODA6">Click here if not redirected</a>
             </div>
