New host info and make text bigger
* Information about new hosting (summer season)

--- a/www/server_host.html
+++ b/www/server_host.html
@@ -6,15 +6,15 @@
     <meta property="og:title" content="WasteLand Official site">
     <meta property="og:site_name" content="WasteLand Origin">
     <meta property="og:url" content="https://wlorigin.vercel.app">
-    <meta property="og:description" content="Social links">
-    <meta property="og:image" content="./images/chatlogo.webp">
+    <meta property="og:description" content="Technical information. Perfomance.">
+    <meta property="og:image" content="./images/serverlogo.webp">
     <link rel="icon" type="image/svg+xml" href="./favicon.svg">
     <link rel="icon" type="image/png" href="./favicon.png">
     <link rel="stylesheet" href="assets/css/compatibility.css">
     <link rel="stylesheet" href="assets/css/btn.css">
     <link rel="stylesheet" href="assets/css/main_new.css">
     <link rel="stylesheet" href="assets/css/font.css">
-    <title>WasteLand - Social</title>
+    <title>WasteLand - Perfomance</title>
 </head>
 <body>
 
@@ -24,13 +24,9 @@
 <header class="header">
     <div class="container">
         <div class="header__inner">
-            <div class="header__logo">Social</div>
+            <div class="header__logo">Server perfomance</div>
             <nav class="nav">
-                <a class="nav__link" href="#indev">Wiki</a>
-                <a class="nav__link" href="https://wlorigin.betteruptime.com">Uptime</a>
-                <a class="nav__link" href="server_host.html">Server</a>
-                <a class="nav__link" href="contact.html">Contact</a>
-                <a class="nav__link active" href="#">Links</a>
+                <a class="nav__link active" href="#">Info</a>
                 <a class="nav__link" href="./index.html">Main</a>
             </nav>
         </div>
@@ -38,12 +34,18 @@
     <div class="intro3">
         <div class="container">
             <div class="intro__inner">
-                <h2 class="intro__suptitle">Read the news and communicate</h2>
-                <h1 class="intro__title">Our social networks</h1>
-                <a class="btn" href="discord.html">Discord</a>
-                <a class="btn" href="telegram.html">Telegram</a>
-                <br><br>
-                <a class="btn" href="mastodon.html">Mastodon</a>
+                <h2 class="intro__suptitle">Components</h2>
+                <p>&nbsp;</p>
+                <p>&nbsp;</p>
+                <h1 class="text_white">CPU: AMD Ryzen 9 9950X 16-Core Processor (4 cores used)</h1>
+                <h1 class="text_white">OS/Java: Ubuntu 24.04.2 LTS / OpenJDK 21 LTS from Ubuntu</h1>
+                <h1 class="text_white">RAM: 9GB (7GB on server)</h1>
+                <h1 class="text_white">Drive: SSD 970 EVO Plus+ Samsung</h1>
+                <p>&nbsp;</p>
+                <h1 class="text_white">Arended hosting (~ 2000 P/mounth)</h1>
+                <p>&nbsp;</p>
+                <p>&nbsp;</p>
+                <a class="btn" href="./discord.html">Discord</a>
             </div>
         </div>
     </div>
