--- a/www/server_host.html
+++ b/www/server_host.html
@@ -42,7 +42,7 @@
                 <h1 class="text_white">RAM: 9GB (7GB on server)</h1>
                 <h1 class="text_white">Drive: SSD 970 EVO Plus+ Samsung</h1>
                 <p>&nbsp;</p>
-                <h1 class="text_white">Arended hosting (~ 2000 P/mounth)</h1>
+                <h1 class="text_white">Rented hosting (~ 2000 P/month)</h1>
                 <p>&nbsp;</p>
                 <p>&nbsp;</p>
                 <a class="btn" href="./discord.html">Discord</a>
