Update host information
Signed-off-by: SpiritOTHawk <spiritothawk@noreply.codeberg.org>

--- a/www/server_host.html
+++ b/www/server_host.html
@@ -37,12 +37,12 @@
                 <h2 class="intro__suptitle">Components</h2>
                 <p>&nbsp;</p>
                 <p>&nbsp;</p>
-                <h1 class="text_white">CPU: AMD Ryzen 9 9950X 16-Core Processor (4 cores used)</h1>
-                <h1 class="text_white">OS/Java: Ubuntu 24.04.2 LTS / OpenJDK 21 LTS from Ubuntu</h1>
-                <h1 class="text_white">RAM: 9GB (7GB on server)</h1>
+                <h1 class="text_white">CPU: AMD Ryzen 9 9950X 16-Core Processor (6 cores used)</h1>
+                <h1 class="text_white">OS/Java: Debian 13 / OpenJDK 21 LTS from Debian</h1>
+                <h1 class="text_white">RAM: 11GB (8GB on server)</h1>
                 <h1 class="text_white">Drive: SSD 970 EVO Plus+ Samsung</h1>
                 <p>&nbsp;</p>
-                <h1 class="text_white">Rented hosting (~ 2000 P/month)</h1>
+                <h1 class="text_white">Rented hosting (~ 2400 P/month)</h1>
                 <p>&nbsp;</p>
                 <p>&nbsp;</p>
                 <a class="btn" href="./discord.html">Discord</a>
